[tool.poetry]
name = "polygon-nautilus"
version = "0.1.0"
description = ""
authors = ["Eric <eric@eruditis.com>"]
readme = "README.md"
packages = [{include = "polygon_nautilus"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
anyio = ">=3.3.4"
certifi = ">=2021.10.8"
charset-normalizer = ">=2.0.7"
greenlet = ">=1.1.3"
h11 = ">=0.12.0"
httpcore = ">=0.13.7"
httpx = ">=0.20.0"
idna = ">=3.3"
keyboard = ">=0.13.5"
numpy = ">=1.23.0"
pandas = ">=1.3.4"
polygon = ">=0.7.0"
python-dateutil = ">=2.8.2"
pwinput = ">=1.0.2"
pytz = ">=2021.3"
redis = ">=3.5.3"
requests = ">=2.26.0"
rfc3986 = ">=1.5.0"
six = ">=1.16.0"
sniffio = ">=1.2.0"
SQLAlchemy = ">=1.4.25"
urllib3 = ">=1.26.7"
websocket-client = ">=1.2.1"
websockets = ">=10.0"
nautilus-trader = "^1.158.0"
jupyter = "^1.0.0"
yubikey-manager = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
