[tool.poetry]
name = "polygon-nautilus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
nautilus_trader = "^1.178.0"
polygon = "^1.1.2"
black = "^23.9.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
